@@ -1,3 +1,24 @@
+modrana (0.48.1) stable; urgency=low
+
+  * Mon Jul 28 2014 Martin Kolman <martin.kolman@gmail.com> - 0.48.1
+  *  - added persistent overlay configuration support in Qt 5 GUI
+  *  - aproximate batch download size is now displayed during batch download in GTK GUI
+  *  - location debuging support in Qt 5 GUI
+  *  - fixed zoom level not being saved in Qt 5 GUI
+  *  - fixed current track logging settings not being displayed properly in GTK GUI
+  *  - fixed URL for the Map1.eu map layer
+
+ -- Martin Kolman <martin.kolman@gmail.com>  Mon, 28 Jul 2014 23:46:01 +0000
+
+modrana (0.47.3) stable; urgency=low
+
+  * Tue Jun 17 2014 Martin Kolman <martin.kolman@gmail.com> - 0.47.3
+  *  - move bundled modules to the bundle directory
+  *   - this should make unbundling on platfors that have the modules (Fedora, etc.) easier
+  *  - remove some more bundled modules from the Sailfish OS package
+
+ -- Martin Kolman <martin.kolman@gmail.com>  Tue, 17 Jun 2014 22:48:59 +0000
+
 modrana (0.47.2) stable; urgency=low
 
   * Tue Jun 17 2014 Martin Kolman <martin.kolman@gmail.com> - 0.47.2
